tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_recall.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "recall",
  "description": "Recall compact memory cards and record lightweight search impressions. Scope may be a key, alias, matcher-containing value, or context_hints. Full content is omitted; call read/read_many for IDs.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "SearchMode": {
        "description": "Search mode — both the caller's requested intent and the engine's actual execution path.\n\n`Auto` means \"let the engine decide\" (hybrid semantic + keyword with RRF fusion).\nThe remaining variants (`Semantic`, `Keyword`, `Text`, `Hybrid`) describe concrete\nexecution paths. When used as a request, `Auto` is the default; when used in\nresponses, the variant reflects how the search was actually executed.",
        "oneOf": [
          {
            "description": "Let the engine decide (hybrid semantic + keyword, falling back as needed).\nIn responses, this variant is never used — it resolves to one of the concrete modes.",
            "type": "string",
            "const": "auto"
          },
          {
            "description": "Embedding-based approximate nearest neighbor search.",
            "type": "string",
            "const": "semantic"
          },
          {
            "description": "Substring-based text matching fallback.",
            "type": "string",
            "const": "text"
          },
          {
            "description": "FTS5 full-text keyword search with BM25 ranking.",
            "type": "string",
            "const": "keyword"
          },
          {
            "description": "Hybrid search: semantic + keyword results fused with Reciprocal Rank Fusion.",
            "type": "string",
            "const": "hybrid"
          }
        ]
      }
    },
    "required": [
      "query"
    ],
    "type": "object",
    "properties": {
      "query": {
        "description": "The search query text.",
        "type": "string"
      },
      "limit": {
        "description": "Maximum number of compact cards to return.",
        "type": "integer",
        "format": "uint",
        "minimum": 0,
        "default": 8
      },
      "context": {
        "description": "Governed multi-context selection. Omission means an intentionally broad\nauthorized search over contexted memories.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Optional scope filter: registered scope key, alias, or value containing a registered matcher.",
        "type": "string"
      },
      "context_hints": {
        "description": "Optional context hints matched against registered scope matchers when `scope` is omitted.",
        "type": "array",
        "items": {
          "type": "string"
        },
        "default": []
      },
      "tags": {
        "description": "Optional tags filter.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "entity": {
        "description": "Optional entity-name filter.",
        "type": "string"
      },
      "include_weak": {
        "description": "Include weak matches in the main result list.",
        "type": "boolean",
        "default": false
      },
      "search_mode": {
        "description": "Optional explicit search mode.",
        "$ref": "#/$defs/SearchMode"
      },
      "literal_terms": {
        "description": "Optional exact identifiers or literal terms for keyword matching.",
        "type": "string"
      },
      "query_context": {
        "description": "Optional extra task/query context for semantic and keyword retrieval.",
        "type": "string"
      }
    }
  }
}
