tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_remember.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "remember",
  "description": "Remember durable information. Governed writes require a context selection, a safe policy default, or explicit context.allow_unresolved=true. Legacy scope/context_hints remain compatibility adapters; entities/access_policy accept shorthand or full objects.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "EntityInputItem": {
        "description": "One request entity accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand for an entity name; the entity type defaults to `unknown`.",
            "type": "string"
          },
          {
            "description": "Full object with explicit `name` and `type`.",
            "$ref": "#/$defs/Entity"
          }
        ]
      },
      "Entity": {
        "description": "A caller-provided typed entity attached to a memory for entity-based retrieval.",
        "type": "object",
        "properties": {
          "name": {
            "description": "The entity name (e.g., \"Alice\", \"example-agent\", \"RFC 9110\").",
            "type": "string"
          },
          "type": {
            "description": "The entity type (e.g., \"person\", \"project\", \"document\").",
            "type": "string"
          }
        },
        "required": [
          "name",
          "type"
        ]
      },
      "MemoryType": {
        "description": "Classifies the kind of knowledge a memory captures.",
        "oneOf": [
          {
            "description": "Facts, definitions, or general knowledge.",
            "type": "string",
            "const": "semantic"
          },
          {
            "description": "Events that happened at a specific time.",
            "type": "string",
            "const": "episodic"
          },
          {
            "description": "Step-by-step instructions or how-tos.",
            "type": "string",
            "const": "procedural"
          }
        ]
      },
      "AccessPolicyInput": {
        "description": "One request access policy accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand; currently only `\"public\"` is accepted.",
            "$ref": "#/$defs/AccessPolicyShorthand"
          },
          {
            "description": "Full object for `public`, `restricted`, or `redacted` access.",
            "$ref": "#/$defs/AccessPolicy"
          }
        ]
      },
      "AccessPolicyShorthand": {
        "description": "String shorthand accepted by request access policy fields.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "string",
            "const": "public"
          }
        ]
      },
      "AccessPolicy": {
        "description": "Controls who can see a memory.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "object",
            "properties": {
              "type": {
                "type": "string",
                "const": "public"
              }
            },
            "required": [
              "type"
            ]
          },
          {
            "description": "Visible only to the listed agents.",
            "type": "object",
            "properties": {
              "allowed": {
                "description": "Agent identifiers permitted to access this memory.",
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "type": {
                "type": "string",
                "const": "restricted"
              }
            },
            "required": [
              "type",
              "allowed"
            ]
          },
          {
            "description": "Visible but with some fields hidden from unauthorized callers.",
            "type": "object",
            "properties": {
              "visible_fields": {
                "description": "Field names that remain visible to unauthorized callers.",
                "type": "array",
                "items": {
                  "$ref": "#/$defs/RedactableField"
                }
              },
              "type": {
                "type": "string",
                "const": "redacted"
              }
            },
            "required": [
              "type",
              "visible_fields"
            ]
          }
        ]
      },
      "RedactableField": {
        "description": "A redactable field name (e.g. content, tags, provenance, entities, importance)",
        "type": "string"
      }
    },
    "required": [
      "content"
    ],
    "type": "object",
    "properties": {
      "content": {
        "description": "The durable memory content to store.",
        "type": "string"
      },
      "summary": {
        "description": "Optional caller-supplied compact summary. The server stores the original content unchanged.",
        "type": "string"
      },
      "context": {
        "description": "Governed multi-context selection. Cannot be combined with `scope` or\n`context_hints`.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Legacy scope key, alias, or matcher-containing value. When both this and\n`context` are omitted, governed policy must supply a safe default or the\nwrite fails with `context_required`.",
        "type": "string"
      },
      "context_hints": {
        "description": "Path, git, or workflow hints matched against registered scope matchers when `scope` is omitted.",
        "type": "array",
        "items": {
          "type": "string"
        },
        "default": []
      },
      "agent_label": {
        "description": "Human-readable agent label for provenance. This does not grant access.",
        "type": "string"
      },
      "tags": {
        "description": "Tags for categorizing this memory.",
        "type": "array",
        "items": {
          "type": "string"
        },
        "default": []
      },
      "entities": {
        "description": "Entities to attach: each item may be a string name shorthand or a full `{name, type}` object.",
        "type": "array",
        "items": {
          "$ref": "#/$defs/EntityInputItem"
        }
      },
      "memory_type": {
        "description": "Memory type classification.",
        "$ref": "#/$defs/MemoryType"
      },
      "importance": {
        "description": "Importance score from 0.0 (low) to 1.0 (high).",
        "type": "number",
        "format": "double"
      },
      "confidence": {
        "description": "Confidence score from 0.0 (low) to 1.0 (high).",
        "type": "number",
        "format": "double"
      },
      "access_policy": {
        "description": "Access policy: `\"public\"` shorthand or a full policy object.",
        "$ref": "#/$defs/AccessPolicyInput"
      }
    }
  }
}
