tests/integration/snapshots/integration__schema_snapshots__mcp_tool_schema_revise.snap
---
source: tests/integration/schema_snapshots.rs
expression: tool
---
{
  "name": "revise",
  "description": "Revise an existing memory using the server-resolved principal for write authorization. Scope accepts key/alias/matcher/context_hints; entities and access_policy accept shorthand or full objects.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "$defs": {
      "MemoryId": {
        "description": "A ULID-formatted unique memory identifier",
        "type": "string"
      },
      "ContextEnvelope": {
        "description": "Context-selection envelope shared by context-aware tools.",
        "type": "object",
        "properties": {
          "refs": {
            "description": "Exact context references.",
            "type": "array",
            "items": {
              "$ref": "#/$defs/ContextReference"
            },
            "default": []
          },
          "hints": {
            "description": "Weak resolver hints. Local paths belong here, never in identities.",
            "type": "array",
            "items": {
              "type": "string"
            },
            "default": []
          },
          "include_descendants": {
            "description": "Include descendants of explicitly selected contexts.",
            "type": "boolean",
            "default": false
          },
          "allow_unresolved": {
            "description": "Permit a governed write to remain contextless.",
            "type": "boolean",
            "default": false
          }
        }
      },
      "ContextReference": {
        "description": "One context locator in a shared context envelope.\n\nExactly one locator form is valid: `id`, `kind` + `key`, or `kind` +\n`identity`.",
        "type": "object",
        "properties": {
          "id": {
            "description": "Stable opaque context ID.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextId"
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "description": "Context kind for key or identity locators.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextKind"
              },
              {
                "type": "null"
              }
            ]
          },
          "key": {
            "description": "Immutable human-readable context key.",
            "type": [
              "string",
              "null"
            ]
          },
          "identity": {
            "description": "Typed durable identity.",
            "anyOf": [
              {
                "$ref": "#/$defs/ContextIdentityInput"
              },
              {
                "type": "null"
              }
            ]
          }
        }
      },
      "ContextId": {
        "description": "A ULID-formatted opaque context identifier",
        "type": "string"
      },
      "ContextKind": {
        "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
        "type": "string"
      },
      "ContextIdentityInput": {
        "description": "Typed durable identity supplied by an agent.\n\nThe raw value exists only while the request is normalized. Persistence and\nresponses use [`ContextIdentity`], which contains a fingerprint and a\nredacted label instead.",
        "type": "object",
        "properties": {
          "scheme": {
            "description": "Identity scheme: `git_remote`, `uri`, or `namespaced_id`.",
            "type": "string"
          },
          "value": {
            "description": "Raw identity value. This is never persisted.",
            "type": "string"
          },
          "namespace": {
            "description": "Required only for `namespaced_id`.",
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "scheme",
          "value"
        ]
      },
      "AccessPolicyInput": {
        "description": "One request access policy accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand; currently only `\"public\"` is accepted.",
            "$ref": "#/$defs/AccessPolicyShorthand"
          },
          {
            "description": "Full object for `public`, `restricted`, or `redacted` access.",
            "$ref": "#/$defs/AccessPolicy"
          }
        ]
      },
      "AccessPolicyShorthand": {
        "description": "String shorthand accepted by request access policy fields.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "string",
            "const": "public"
          }
        ]
      },
      "AccessPolicy": {
        "description": "Controls who can see a memory.",
        "oneOf": [
          {
            "description": "Visible to all callers.",
            "type": "object",
            "properties": {
              "type": {
                "type": "string",
                "const": "public"
              }
            },
            "required": [
              "type"
            ]
          },
          {
            "description": "Visible only to the listed agents.",
            "type": "object",
            "properties": {
              "allowed": {
                "description": "Agent identifiers permitted to access this memory.",
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "type": {
                "type": "string",
                "const": "restricted"
              }
            },
            "required": [
              "type",
              "allowed"
            ]
          },
          {
            "description": "Visible but with some fields hidden from unauthorized callers.",
            "type": "object",
            "properties": {
              "visible_fields": {
                "description": "Field names that remain visible to unauthorized callers.",
                "type": "array",
                "items": {
                  "$ref": "#/$defs/RedactableField"
                }
              },
              "type": {
                "type": "string",
                "const": "redacted"
              }
            },
            "required": [
              "type",
              "visible_fields"
            ]
          }
        ]
      },
      "RedactableField": {
        "description": "A redactable field name (e.g. content, tags, provenance, entities, importance)",
        "type": "string"
      },
      "EntityInputItem": {
        "description": "One request entity accepted by write/update tools.",
        "anyOf": [
          {
            "description": "String shorthand for an entity name; the entity type defaults to `unknown`.",
            "type": "string"
          },
          {
            "description": "Full object with explicit `name` and `type`.",
            "$ref": "#/$defs/Entity"
          }
        ]
      },
      "Entity": {
        "description": "A caller-provided typed entity attached to a memory for entity-based retrieval.",
        "type": "object",
        "properties": {
          "name": {
            "description": "The entity name (e.g., \"Alice\", \"example-agent\", \"RFC 9110\").",
            "type": "string"
          },
          "type": {
            "description": "The entity type (e.g., \"person\", \"project\", \"document\").",
            "type": "string"
          }
        },
        "required": [
          "name",
          "type"
        ]
      }
    },
    "required": [
      "id"
    ],
    "type": "object",
    "properties": {
      "id": {
        "description": "The memory ID to revise.",
        "$ref": "#/$defs/MemoryId"
      },
      "content": {
        "description": "Replacement content. When set, embeddings are regenerated in the background.",
        "type": "string"
      },
      "summary": {
        "description": "Replacement compact summary for cards.",
        "type": "string"
      },
      "agent_label": {
        "description": "Replacement human-readable agent label. This does not grant access.",
        "type": "string"
      },
      "context": {
        "description": "Complete replacement governed membership set. Omission leaves\nmemberships unchanged.",
        "$ref": "#/$defs/ContextEnvelope"
      },
      "scope": {
        "description": "Replacement scope: registered scope key, alias, or value containing a registered matcher.",
        "type": "string"
      },
      "context_hints": {
        "description": "Optional context hints matched against registered scope matchers when `scope` is omitted.",
        "type": "array",
        "items": {
          "type": "string"
        },
        "default": []
      },
      "tags": {
        "description": "Replacement tags.",
        "type": "array",
        "items": {
          "type": "string"
        }
      },
      "access_policy": {
        "description": "Replacement access policy: `\"public\"` shorthand or a full policy object.",
        "$ref": "#/$defs/AccessPolicyInput"
      },
      "importance": {
        "description": "Replacement importance score.",
        "type": "number",
        "format": "double"
      },
      "confidence": {
        "description": "Replacement confidence score.",
        "type": "number",
        "format": "double"
      },
      "entities": {
        "description": "Replacement entities: each item may be a string name shorthand or a full `{name, type}` object.",
        "type": "array",
        "items": {
          "$ref": "#/$defs/EntityInputItem"
        }
      }
    }
  }
}
